@@ -32,6 +32,7 @@ Changelog
  * Fix: Fixed incorrect z-index on userbar causing it to appear behind page content (Stein Strindhaug)
  * Fix: Form submissions pagination no longer looses date filter when changing page (Bertrand Bordage)
  * Fix: PostgreSQL search backend now removes duplicate page instances from the database (Bertrand Bordage)
+ * Fix: `FormSubmissionsPanel` now recognises custom form submission classes (LB (Ben Johnston))
 
 
 1.13.1 (17.11.2017)
